// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AddForm /> without throwing 1`] = `
.c31 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c31::-moz-focus-inner,
.c31[type='button']::-moz-focus-inner,
.c31[type='reset']::-moz-focus-inner,
.c31[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c31:-moz-focusring,
.c31[type='button']:-moz-focusring,
.c31[type='reset']:-moz-focusring,
.c31[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c30 {
  min-width: 7.5rem;
}

.c29 {
  display: inline-block;
}

.c28 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c28:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c28:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c28:active,
.c28:active:hover,
.c28:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c28[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c28:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c28:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c28:active,
.c28:active:hover,
.c28:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c32 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  cursor: not-allowed;
  pointer-events: none;
  color: rgb(216,216,216);
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c32:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c32:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c32:active,
.c32:active:hover,
.c32:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c32[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c32:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c32:hover {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c32:active,
.c32:active:hover,
.c32:active:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c34 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(210,67,58);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(210,67,58);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  float: right;
}

.c34:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c34:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c34:active,
.c34:active:hover,
.c34:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c34[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c34:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c34:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c34:active,
.c34:active:hover,
.c34:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c34:focus {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c34:hover {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c34:active,
.c34:active:hover,
.c34:active:focus {
  background-color: rgba(210,67,58,0.1);
  border-color: rgb(205,37,27);
}

.c18 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c26 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c15 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c21 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c33 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c10 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c22 {
  height: 1px;
  background-color: rgb(216,216,216);
  background-color: transparent;
}

.c19 {
  margin-top: 0.1875rem;
}

.c25 {
  margin-top: 0.75rem;
}

.c35 {
  margin-right: 0.75rem;
}

.c6 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c13 {
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c4 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c12 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  background-color: transparent;
}

.c3 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c9 {
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c16 {
  display: inline-block;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c20:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c20::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:invalid {
  box-shadow: none;
}

.c20:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c20:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 6rem;
  min-height: 6rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  font-family: "Roboto Mono",monospace;
  width: 100%;
  min-width: 100%;
  text-overflow: ellipsis;
  resize: vertical;
}

.c24:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c24::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:invalid {
  box-shadow: none;
}

.c24:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c24:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled {
  color: rgb(73,73,73);
}

.c24:disabled::-webkit-input-placeholder {
  color: rgb(73,73,73);
}

.c24:disabled::-moz-placeholder {
  color: rgb(73,73,73);
}

.c24:disabled:-ms-input-placeholder {
  color: rgb(73,73,73);
}

.c23 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  max-width: 100%;
}

.c17 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c0 {
  margin-bottom: 0;
}

.c2 {
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c27 {
  margin-right: 0.375rem;
}

.c5 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  width: 100%;
  box-sizing: border-box;
}

.c8 {
  height: 2.9375rem;
  max-width: 98%;
}

@media only screen and (min-width:0em) {
  .c26 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:0em) {
  .c26 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:0em) {
  .c15 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c21 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c33 {
    display: none;
  }
}

<form
  className="c0"
  onSubmit={undefined}
>
  <div
    className="c1"
    disabled={false}
    name="card"
  >
    <div
      className="c2 c3 c4"
      disabled={false}
      name="card-header"
      onClick={false}
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8 c9 c4"
            disabled={false}
            name="card-header-meta"
          >
            <h4
              className="c10"
            >
              Add metadata
            </h4>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 c12"
      disabled={false}
      name="card-outlet"
    >
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
              id={null}
              name="name"
              role="group"
              style={undefined}
            >
              <label
                className="c17 c18"
                htmlFor={null}
              >
                Metadata
                 key
              </label>
              <div
                className="c19"
              >
                <input
                  className="c20"
                  disabled={false}
                  id={null}
                  onBlur={null}
                />
                <div
                  className="c14"
                >
                  <div
                    className="c21"
                  />
                </div>
              </div>
            </div>
            <div
              className="c22 c14"
              height="0.75rem"
            />
          </div>
        </div>
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
              id={null}
              name="value"
              role="group"
              style={undefined}
            >
              <label
                className="c17 c18"
                htmlFor={null}
              >
                Metadata
                 value
              </label>
              <div
                className="c19"
              >
                <textarea
                  className="c23 c24"
                  disabled={false}
                  id={null}
                  name="name"
                  onBlur={undefined}
                />
              </div>
              <div
                className="c14"
              >
                <div
                  className="c21"
                />
              </div>
            </div>
            <div
              className="c22 c14"
              height="0.75rem"
            />
          </div>
        </div>
        <div
          className="c25"
        >
          <div
            className="c26"
          >
            <div
              className="c15"
            >
              <button
                className="c27 c28 c29 c30 c31"
                data-ui-button="true"
                disabled={false}
                href=""
                id={null}
                onClick={[Function]}
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                className="c32 c29 c30 c31"
                data-ui-button="true"
                disabled={true}
                href=""
                id={null}
                type="submit"
              >
                <span>
                  Create
                </span>
              </button>
            </div>
            <div
              className="c33"
            >
              <button
                className="c34 c29 c30 c31"
                data-ui-button="true"
                disabled={false}
                href=""
                icon={true}
                id={null}
                onClick={[Function]}
                type="button"
              >
                <div
                  className="c35"
                >
                  <svg
                    height="16"
                    style={
                      Object {
                        "transform": "rotate(0deg)",
                      }
                    }
                    viewBox="0 0 12 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.67,0V1.5H0V3H12V1.5H9.33V0ZM0,4,1.33,16h9.34L12,4ZM8,5h2.51l-1,10H8ZM1.49,5H4V15H2.53ZM7,15H5V5H7Z"
                      fill="rgb(210, 67, 58)"
                    />
                  </svg>
                </div>
                <span>
                  Delete
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders <EditForm /> without throwing 1`] = `
.c32 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.c32::-moz-focus-inner,
.c32[type='button']::-moz-focus-inner,
.c32[type='reset']::-moz-focus-inner,
.c32[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c32:-moz-focusring,
.c32[type='button']:-moz-focusring,
.c32[type='reset']:-moz-focusring,
.c32[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c31 {
  min-width: 7.5rem;
}

.c30 {
  display: inline-block;
}

.c29 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c29:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c29:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c29:active,
.c29:active:hover,
.c29:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c29[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c29:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c29:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c29:active,
.c29:active:hover,
.c29:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c33 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  cursor: not-allowed;
  pointer-events: none;
  color: rgb(216,216,216);
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c33:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c33:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c33:active,
.c33:active:hover,
.c33:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c33[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c33:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c33:hover {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c33:active,
.c33:active:hover,
.c33:active:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c35 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(210,67,58);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(210,67,58);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  float: right;
}

.c35:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c35:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c35:active,
.c35:active:hover,
.c35:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c35[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c35:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c35:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c35:active,
.c35:active:hover,
.c35:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c35:focus {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c35:hover {
  color: rgb(205,37,27);
  background-color: rgb(255,255,255);
  border-color: rgb(205,37,27);
}

.c35:active,
.c35:active:hover,
.c35:active:focus {
  background-color: rgba(210,67,58,0.1);
  border-color: rgb(205,37,27);
}

.c18 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c26 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c15 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c21 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c27 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c34 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c22 {
  height: 1px;
  background-color: rgb(216,216,216);
  background-color: transparent;
}

.c19 {
  margin-top: 0.1875rem;
}

.c25 {
  margin-top: 0.75rem;
}

.c36 {
  margin-right: 0.75rem;
}

.c6 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c13 {
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c4 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c12 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  background-color: transparent;
}

.c3 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c9 {
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c16 {
  display: inline-block;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  width: 100%;
}

.c20 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c20:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c20::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:invalid {
  box-shadow: none;
}

.c20:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c20:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c20:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 6rem;
  min-height: 6rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  font-family: "Roboto Mono",monospace;
  width: 100%;
  min-width: 100%;
  text-overflow: ellipsis;
  resize: vertical;
}

.c24:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c24::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:invalid {
  box-shadow: none;
}

.c24:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c24:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c24:disabled {
  color: rgb(73,73,73);
}

.c24:disabled::-webkit-input-placeholder {
  color: rgb(73,73,73);
}

.c24:disabled::-moz-placeholder {
  color: rgb(73,73,73);
}

.c24:disabled:-ms-input-placeholder {
  color: rgb(73,73,73);
}

.c23 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  max-width: 100%;
}

.c17 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c0 {
  margin-bottom: 0;
}

.c10 {
  word-break: break-all;
  line-height: 1.5;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

.c2 {
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c28 {
  margin-right: 0.375rem;
}

.c5 {
  word-wrap: break-word;
  overflow-wrap: break-word;
  width: 100%;
  box-sizing: border-box;
}

.c8 {
  height: 2.9375rem;
  max-width: 98%;
}

@media only screen and (min-width:0em) {
  .c26 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:0em) {
  .c26 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:0em) {
  .c15 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c21 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c27 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c34 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

<form
  className="c0"
  onSubmit={undefined}
>
  <div
    className="c1"
    disabled={false}
    name="card"
  >
    <div
      className="c2 c3 c4"
      disabled={false}
      name="card-header"
      onClick={undefined}
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8 c9 c4"
            disabled={false}
            name="card-header-meta"
          >
            <div
              className="c10"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 c12"
      disabled={false}
      name="card-outlet"
    >
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
              id={null}
              name="name"
              role="group"
              style={undefined}
            >
              <label
                className="c17 c18"
                htmlFor={null}
              >
                Metadata
                 key
              </label>
              <div
                className="c19"
              >
                <input
                  className="c20"
                  disabled={false}
                  id={null}
                  onBlur={null}
                />
                <div
                  className="c14"
                >
                  <div
                    className="c21"
                  />
                </div>
              </div>
            </div>
            <div
              className="c22 c14"
              height="0.75rem"
            />
          </div>
        </div>
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
              id={null}
              name="value"
              role="group"
              style={undefined}
            >
              <label
                className="c17 c18"
                htmlFor={null}
              >
                Metadata
                 value
              </label>
              <div
                className="c19"
              >
                <textarea
                  className="c23 c24"
                  disabled={false}
                  id={null}
                  name="name"
                  onBlur={undefined}
                />
              </div>
              <div
                className="c14"
              >
                <div
                  className="c21"
                />
              </div>
            </div>
            <div
              className="c22 c14"
              height="0.75rem"
            />
          </div>
        </div>
        <div
          className="c25"
        >
          <div
            className="c26"
          >
            <div
              className="c27"
            >
              <button
                className="c28 c29 c30 c31 c32"
                data-ui-button="true"
                disabled={false}
                href=""
                id={null}
                onClick={[Function]}
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                className="c33 c30 c31 c32"
                data-ui-button="true"
                disabled={true}
                href=""
                id={null}
                type="submit"
              >
                <span>
                  Save
                </span>
              </button>
            </div>
            <div
              className="c34"
            >
              <button
                className="c35 c30 c31 c32"
                data-ui-button="true"
                disabled={false}
                href=""
                icon={true}
                id={null}
                onClick={[Function]}
                type="button"
              >
                <div
                  className="c36"
                >
                  <svg
                    height="16"
                    style={
                      Object {
                        "transform": "rotate(0deg)",
                      }
                    }
                    viewBox="0 0 12 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.67,0V1.5H0V3H12V1.5H9.33V0ZM0,4,1.33,16h9.34L12,4ZM8,5h2.51l-1,10H8ZM1.49,5H4V15H2.53ZM7,15H5V5H7Z"
                      fill="rgb(210, 67, 58)"
                    />
                  </svg>
                </div>
                <span>
                  Delete
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
